--- a/style.css
+++ b/style.css
@@ -219,6 +219,7 @@ header {
     position: relative;
     overflow: hidden;
 }
+
 .card-1:hover::before {
     content: '';
     position: absolute;
@@ -230,14 +231,22 @@ header {
     z-index: 0;
     animation: fillUpCard1 0.2s forwards;
 }
+
 @keyframes fillUpCard1 {
-    from { height: 0; }
-    to { height: 100%; }
+    from {
+        height: 0;
+    }
+
+    to {
+        height: 100%;
+    }
 }
+
 .card-1:hover {
     color: white;
 }
-.card-1:hover > * {
+
+.card-1:hover>* {
     position: relative;
     z-index: 1;
 }
@@ -249,6 +258,7 @@ header {
     position: relative;
     overflow: hidden;
 }
+
 .card-2:hover::before {
     content: '';
     position: absolute;
@@ -260,11 +270,18 @@ header {
     z-index: 0;
     animation: fillUpCard2 0.2s forwards;
 }
+
 @keyframes fillUpCard2 {
-    from { height: 0; }
-    to { height: 100%; }
+    from {
+        height: 0;
+    }
+
+    to {
+        height: 100%;
+    }
 }
-.card-2:hover > * {
+
+.card-2:hover>* {
     position: relative;
     z-index: 1;
 }
@@ -276,6 +293,7 @@ header {
     position: relative;
     overflow: hidden;
 }
+
 .card-3:hover::before {
     content: '';
     position: absolute;
@@ -287,11 +305,18 @@ header {
     z-index: 0;
     animation: fillUpCard3 0.2s forwards;
 }
+
 @keyframes fillUpCard3 {
-    from { height: 0; }
-    to { height: 100%; }
+    from {
+        height: 0;
+    }
+
+    to {
+        height: 100%;
+    }
 }
-.card-3:hover > * {
+
+.card-3:hover>* {
     position: relative;
     z-index: 1;
 }
@@ -316,6 +341,7 @@ header {
     text-decoration: none;
     margin: 20px 0;
 }
+
 .card:hover .card-link {
     color: #fff;
 }
@@ -436,6 +462,15 @@ header {
     height: 100%;
     object-fit: cover;
     display: block;
+
+    opacity: 0.85;
+    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.news-card:hover img {
+    opacity: 1;
+    transform: scale(1.05);
+
 }
 
 .overlay {
@@ -593,9 +628,10 @@ header {
     z-index: 2;
 }
 
-.month{
+.month {
     margin-bottom: 20px;
 }
+
 .event-date .day {
     font-size: 22px;
     font-weight: 700;
@@ -606,6 +642,14 @@ header {
     width: 100%;
     height: 200px;
     object-fit: cover;
+    opacity: 0.85;
+    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.event-card:hover .event-image {
+    opacity: 1;
+    transform: scale(1.05);
+
 }
 
 .event-content {
