--- a/footer.css
+++ b/footer.css
@@ -103,7 +103,7 @@ footer {
 
 .footer-col.subscribe input:focus {
     background-color: transparent;
-    color: black;
+    color: white;
     outline: 1px solid white;
     border: none;
 }
